--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,40 +1,3 @@
+@import 'mixins';
 @import 'global';
-
-body{
-	background-color: var(--bg-color);
-	font-family: var(--body-font-family), sans-serif;
-	font-size: 27px;
-	line-height: auto;
-	min-width: 320px;
-	overflow-x: hidden;
-	color: var(--white-color);
-}
-
-.container{
-	max-width: 1478px;
-	width: 100%;
-	margin: 0 auto;
-	padding: 0 20px;
-	&.no-padding{
-		padding: 0;
-	}
-}
-
-// .container{
-// 	@media screen and (max-width: 1280px) {
-// 		max-width: 1280px;
-// 	}
-// }
-
-.rune-header{
-	padding: 60px 0 40px 0;
-	h1{
-		font-size: 92px;
-		text-transform: uppercase;
-		line-height: 80px;
-		span{
-			display: block;
-			font-size: 80px;
-		}
-	}
-}
+@import 'header';
