--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -68,8 +68,12 @@
 		width: 282px;
 		height: 282px;
 		border-radius: 100%;
-		background: rgba(255, 255, 255, 0.27);
+		background-color: rgba(255, 255, 255, 0.27);
 		backdrop-filter: blur(16.85px);
+		transition: all .25s ease-in-out;
+		&:hover{
+			background-color: var(--accent-color);
+		}
 		@include xl-down{
 			width: calc(var(--index) * 8.1);
 			height: calc(var(--index) * 8.1);
