--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -17,7 +17,7 @@
 		font-weight: 400;
 		margin-bottom: 50px;
 		display: block;
-		span{
+		> span{
 			display: block;
 			font-size: 80px;
 			@include xl-down{
@@ -26,7 +26,9 @@
 			@include sm-down{
 				display: flex;
 				justify-content: end;
-				text-align: right;
+				span{
+					width: min-content;
+				}
 			}
 		}
 		@include xl-down{
