--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -35,6 +35,9 @@ body{
 	@include sm-down{
 		font-size: 10px;
 	}
+	p{
+		text-align: justify;
+	}
 }
 
 .container{
@@ -70,6 +73,56 @@ section{
 	@include xl-up{
 		padding: 40px 0;
 	}
+}
+
+.btn{
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 0.02em;
+	background-color: var(--gray-color);
+	color: var(--white-color);
+	border-radius: 4.1162px;
+	cursor: pointer;
+	border: none;
+	border-radius: 4.1162px;
+	transition: all .25s ease-in-out;
+	&:hover{
+		background-color: var(--accent-color);
+	}
+	font-size: calc(var(--index));
+	padding: calc(var(--index) * 1.2);
+	@include xl-up{
+		padding: 36px 40px;
+		font-size: 27px;
+	}
+	@include sm-down{
+		font-size: 11px;
+	}
+}
+
+input,
+select{
+	color: var(--white-color);
+	font-weight: 400;
+	letter-spacing: 0.02em;
+	background: rgba(238, 238, 238, 0.51);
+	border-radius: 4.1162px;
+	border: none;
+	padding: calc(var(--index) * 1.1) calc(var(--index));
+	font-size: calc(var(--index));
+	&::placeholder{
+		color: var(--white-color);
+	}
+	@include xl-up{
+		font-size: 24px;
+		padding: 36px 40px;
+	}
+	@include sm-down{
+		font-size: 10px;
+	}
+}
+input{
+	text-transform: uppercase;
 }
 
 .badge{
