--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -11,7 +11,7 @@
 .run-calc-form{
 	border: 1.37207px solid var(--white-color);
 	max-width: 95%;
-	margin: 0 auto;
+	margin: 0 auto calc(var(--index) * 1.3);
 	border-radius: 4.1162px;
 	display: flex;
 	flex-direction: column;
@@ -21,9 +21,16 @@
 	@include xl-up{
 		gap: 27px;
 		padding: 60px 90px;
+		margin-bottom: 80px;
 	}
 	@include md-down{
 		max-width: 100%;
+	}
+	@include sm-down{
+		margin-bottom: 14px;
+	}
+	input{
+		width: 100%;
 	}
 	.btn{
 		margin-top: calc(var(--index) * 2.2);
@@ -59,4 +66,10 @@
 		font-family: var(--heading-font-family), sans-serif;
 		line-height: 1;
 	}
+}
+
+.run-calc-section-with-img{
+	text-align: center;
+	position: relative;
+	transform: translateY(-15%);
 }
