--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -73,6 +73,30 @@ section{
 	@include xl-up{
 		padding: 40px 0;
 	}
+	h2{
+		font-family: var(--heading-font-family), sans-serif;
+		text-transform: uppercase;
+		text-align: center;
+		font-weight: normal;
+		font-size: calc(var(--index) * 1.3);
+		margin-bottom: calc(var(--index) * 2.3);
+		@include xl-up{
+			font-size: 41px;
+			line-height: 50px;
+			margin-bottom: 128px;
+		}
+		@include sm-down{
+			font-size: 14px;
+			margin-bottom: 25px;
+		}
+		> span {
+			display: flex;
+			justify-content: end;
+			@include sm-down{
+				display: block;
+			}
+		}
+	}
 }
 
 .btn{
