--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -128,6 +128,7 @@
 	}
 	&-item{
 		padding: calc(var(--index) * 1.2) calc(var(--index));
+		position: relative;
 		@include xl-up{
 			padding: 50px 20px;
 			font-size: 21px;
@@ -136,8 +137,26 @@
 		@include lg-down{
 			font-size: 12px;
 		}
+		@include sm-down{
+			font-size: 10px;
+		}
 		@include md-down{
 			text-align: center;
+			padding: 0;
+			&:not(:last-child){
+				padding-bottom: 65px;
+				margin-bottom: 16px;
+				&::after{
+					content: '';
+					position: absolute;
+					height: 48px;
+					width: 1px;
+					background-color: #fff;
+					bottom: 0;
+					left: 50%;
+					transform: translateX(-50%);
+				}
+			}
 			p{
 				text-align: center;
 			}
@@ -158,6 +177,10 @@
 			padding-bottom: 10px;
 			margin-bottom: 20px;
 			display: block;
+			@include sm-down{
+				padding-bottom: 5px;
+				margin-bottom: 12px;
+			}
 			&::after{
 				content: '';
 				height: 0.65px;
@@ -174,6 +197,27 @@
 					width: 122px;
 				}
 			}
+		}
+	}
+}
+
+.run-calc-section-descr-title{
+	display: none;
+	@include md-down{
+		display: block;
+		text-align: center;
+		padding-bottom: 42px;
+		margin-bottom: 16px;
+		position: relative;
+		&::after{
+			content: '';
+			position: absolute;
+			height: 26px;
+			width: 1px;
+			background-color: #fff;
+			bottom: 0;
+			left: 50%;
+			transform: translateX(-50%);
 		}
 	}
 }
