--- a/scss/_form-calc.scss
+++ b/scss/_form-calc.scss
@@ -135,7 +135,7 @@
 			font-weight: 300;
 		}
 		@include lg-down{
-			font-size: 12px;
+			font-size: 14px;
 		}
 		@include sm-down{
 			font-size: 10px;
@@ -218,6 +218,44 @@
 			bottom: 0;
 			left: 50%;
 			transform: translateX(-50%);
+		}
+	}
+}
+
+.run-calc-section-descr-end{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	position: relative;
+	@include md-down{
+		margin: 70px 0 80px;
+		img{
+			margin-top: 50px;
+		}
+	}
+	.text-block{
+		position: absolute;
+		right: 0;
+		top: 0;
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		align-items: end;
+		@include md-down{
+			justify-content: space-between;
+			font-size: 14px;
+		}
+		@include sm-down{
+			font-size: 10px;
+		}
+		p{
+			&:first-child{
+				max-width: 729px;
+			}
+			&:last-child{
+				max-width: 940px;
+			}
 		}
 	}
 }
